# Vulkan-Student-Project

./: .gitignore  README.md
OrangeEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  OrangeEngine.sln  OrangeEngine.sln.lnk  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  buildCMake.bat  build_debug.bat  build_release.bat  cmake_install.cmake  run_program.bat
OrangeEngine/Archive/: build_all.bat
OrangeEngine/Archive/OrangeEngine/: OrangeEngine.cpp  OrangeEngine.vcxproj
OrangeEngine/LinkerBuildTests/: LinkerBuildTest.cpp  LinkerBuildTest.h  LinkerBuildTests.vcxproj  LinkerBuildTests.vcxproj.filters  VulkanInstance.h  imgui_impl_vulkan.h  main.cpp  resource.h
OrangeEngine/LinkerBuildTests/Shaders/: compile_fragment_shader.bat  compile_vertex_shader.bat  fragmvp.spv  tri_mesh.frag  tri_mesh.vert  vertmvp.spv
OrangeEngine/LinkerBuildTests/Shaders/PBR Attempt/: fragmvp.spv  (+2 more)
OrangeEngine/LinkerBuildTests/Src/: Mesh.cpp  Mesh.h  PushConstants.h  Texture.cpp  Texture.h  main.cpp  tinyddsloader.cpp  vulkanGlobals.h
OrangeEngine/LinkerBuildTests/Textures/: container.dds
OrangeEngine/OrangeEngine/: LinkerBuildTest.cpp  OrangeEngine.cpp  OrangeEngine.vcxproj  OrangeEngine.vcxproj.filters
OrangeEngine/PropetyPages/: Debug-x64.props  Release-x64.props
OrangeEngine/SampleTests/: SampleTests.vcxproj  test.cpp
OrangeEngine/VulkanStudentProject/: VulkanStudentProject.vcxproj
OrangeEngine/src/: CMakeLists.txt  OrangeEngine.vcxproj  OrangeEngine.vcxproj.filters  cmake_install.cmake
OrangeEngine/src/main/: main.cpp
(+3 files in other folders)
